fix shutter icon shifting after clicking a pic

--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -417,6 +417,7 @@
 .cameraLabel {
   color: white;
   margin-left: 10px;
+  min-width: 49px;
 }
 
 .allowCamera {
